[gd_scene load_steps=6 format=2]

[ext_resource path="res://Audio/SoundEffects/GlobalSoundEffectGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/SettingsUI.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]

[node name="SettingsUI" type="Node2D"]
script = ExtResource( 2 )

[node name="VolumeSliders" type="Node2D" parent="."]

[node name="Stx" type="HScrollBar" parent="VolumeSliders"]
margin_left = 55.0
margin_top = 24.0
margin_right = 157.0
margin_bottom = 40.0
rect_scale = Vector2( 0.75, 0.75 )
max_value = 1.0
step = 0.05
value = 0.5

[node name="Music" type="HScrollBar" parent="VolumeSliders"]
margin_left = 55.0
margin_top = 40.0
margin_right = 157.0
margin_bottom = 56.0
rect_scale = Vector2( 0.75, 0.75 )
max_value = 1.0
step = 0.05
value = 0.5

[node name="Master" type="HScrollBar" parent="VolumeSliders"]
margin_left = 55.0
margin_top = 58.0
margin_right = 157.0
margin_bottom = 74.0
rect_scale = Vector2( 0.75, 0.75 )
max_value = 1.0
step = 0.05
value = 0.5

[node name="GlobalSoundEffectGenerator" parent="." instance=ExtResource( 1 )]

[node name="Settings" type="Node2D" parent="."]

[node name="Volume" type="RichTextLabel" parent="Settings"]
margin_left = 6.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 39.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "VOLUME:"

[node name="STX" type="RichTextLabel" parent="Settings"]
margin_left = 6.0
margin_top = 22.0
margin_right = 118.0
margin_bottom = 56.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "STX"

[node name="MUSIC" type="RichTextLabel" parent="Settings"]
margin_left = 6.0
margin_top = 39.0
margin_right = 118.0
margin_bottom = 73.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "MUSIC"

[node name="MASTER" type="RichTextLabel" parent="Settings"]
margin_left = 6.0
margin_top = 56.0
margin_right = 118.0
margin_bottom = 90.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "MASTER"

[node name="BACK" type="RichTextLabel" parent="Settings"]
margin_left = 126.0
margin_top = 73.0
margin_right = 238.0
margin_bottom = 107.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "BACK"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Settings/BACK"]
position = Vector2( 0, 2 )
scale = Vector2( 3, 1.25 )
shape = SubResource( 3 )

[connection signal="value_changed" from="VolumeSliders/Stx" to="." method="_on_Stx_value_changed"]
[connection signal="value_changed" from="VolumeSliders/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="VolumeSliders/Master" to="." method="_on_Master_value_changed"]
[connection signal="pressed" from="Settings/BACK/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
